inmprovements and comparison of scRNAseq analysis, adding compass for bulk RNAseq

--- a/notebooks/convert_to_anndata.ipynb
+++ b/notebooks/convert_to_anndata.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "toxic-radar",
+   "id": "sustained-collectible",
    "metadata": {},
    "source": [
     "# Converting read quantifications to Anndata objects"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "effective-france",
+   "id": "russian-blink",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "middle-practice",
+   "id": "adult-edward",
    "metadata": {},
    "source": [
     "## Gathering metadata"
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "informative-beatles",
+   "id": "bacterial-silver",
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "retired-designation",
+   "id": "reasonable-couple",
    "metadata": {},
    "source": [
     "## Converting FeatureCounts quantification"
@@ -271,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "durable-princess",
+   "id": "entire-obligation",
    "metadata": {},
    "outputs": [
     {
@@ -678,7 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "defensive-inside",
+   "id": "streaming-pregnancy",
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "improved-metadata",
+   "id": "major-independence",
    "metadata": {},
    "source": [
     "## Converting Salmon quantification\n",
@@ -731,7 +731,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "identified-softball",
+   "id": "breathing-advance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -745,7 +745,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "beginning-dollar",
+   "id": "occasional-thomson",
    "metadata": {},
    "outputs": [
     {
@@ -870,7 +870,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "warming-seeker",
+   "id": "religious-zoning",
    "metadata": {},
    "outputs": [
     {
@@ -1030,8 +1030,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "underlying-andrew",
+   "execution_count": 8,
+   "id": "irish-hopkins",
    "metadata": {},
    "outputs": [
     {
@@ -1048,10 +1048,10 @@
        "AnnData object with n_obs × n_vars = 376 × 54456\n",
        "    obs: 'sample_description', 'sample_genotype', 'sample_treatment', 'sample_sex', 'sample_litter', 'sample_mouseID'\n",
        "    var: 'Length', 'gencode_id'\n",
-       "    layers: 'counts'"
+       "    layers: 'counts', 'tpm'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1068,13 +1068,14 @@
     "    var = var\n",
     ")\n",
     "adata.layers['counts'] = csr_matrix(sctab_dict['counts'].loc[:, sctab_dict['counts'].columns.str.startswith('1')].values.T)\n",
+    "adata.layers['tpm'] = data\n",
     "adata"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "wrapped-placement",
+   "execution_count": 9,
+   "id": "published-diesel",
    "metadata": {},
    "outputs": [
     {
