--- a/notebooks/compass_preparation.ipynb
+++ b/notebooks/compass_preparation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "palestinian-motion",
+   "id": "injured-outline",
    "metadata": {},
    "source": [
     "# Data preparation for [Compass](https://github.com/YosefLab/Compass)"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "elegant-salvation",
+   "id": "nuclear-marshall",
    "metadata": {},
    "source": [
     "## Preparing novarino processed data for Compass"
@@ -18,8 +18,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "identified-editing",
+   "execution_count": 9,
+   "id": "pursuant-polish",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,8 +86,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "different-stadium",
+   "execution_count": 10,
+   "id": "military-blanket",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
        "    obs: 'orig.ident', 'nCount_RNA', 'nFeature_RNA', 'seq_folder', 'nUMI', 'nGene', 'log10GenesPerUMI', 'mitoRatio', 'cells', 'sample', 'sample_mouseID', 'sample_litter', 'sample_treatment', 'sample_sex', 'RNA_snn_res.0.9', 'seurat_clusters'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,8 +109,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "closing-glance",
+   "execution_count": 11,
+   "id": "entire-diesel",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,8 +125,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "existing-evaluation",
+   "execution_count": 12,
+   "id": "worthy-waste",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,8 +135,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "champion-criterion",
+   "execution_count": 13,
+   "id": "geographic-sally",
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +461,7 @@
        "[203 rows x 17 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,40 +479,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "dangerous-electricity",
+   "execution_count": 14,
+   "id": "stone-breeding",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'olfactory_cells_wt': View of AnnData object with n_obs × n_vars = 35 × 21907\n",
+       "{'olfactory_cells_wt': View of AnnData object with n_obs × n_vars = 35 × 25854\n",
        "     obs: 'orig.ident', 'nCount_RNA', 'nFeature_RNA', 'seq_folder', 'nUMI', 'nGene', 'log10GenesPerUMI', 'mitoRatio', 'cells', 'sample', 'sample_mouseID', 'sample_litter', 'sample_treatment', 'sample_sex', 'RNA_snn_res.0.9', 'seurat_clusters', 'cell_type'\n",
        "     var: 'Length',\n",
-       " 'olfactory_cells_ko': View of AnnData object with n_obs × n_vars = 20 × 21907\n",
+       " 'olfactory_cells_ko': View of AnnData object with n_obs × n_vars = 20 × 25854\n",
        "     obs: 'orig.ident', 'nCount_RNA', 'nFeature_RNA', 'seq_folder', 'nUMI', 'nGene', 'log10GenesPerUMI', 'mitoRatio', 'cells', 'sample', 'sample_mouseID', 'sample_litter', 'sample_treatment', 'sample_sex', 'RNA_snn_res.0.9', 'seurat_clusters', 'cell_type'\n",
        "     var: 'Length',\n",
-       " 'oligodendrytes_wt': View of AnnData object with n_obs × n_vars = 33 × 21907\n",
+       " 'oligodendrytes_wt': View of AnnData object with n_obs × n_vars = 33 × 25854\n",
        "     obs: 'orig.ident', 'nCount_RNA', 'nFeature_RNA', 'seq_folder', 'nUMI', 'nGene', 'log10GenesPerUMI', 'mitoRatio', 'cells', 'sample', 'sample_mouseID', 'sample_litter', 'sample_treatment', 'sample_sex', 'RNA_snn_res.0.9', 'seurat_clusters', 'cell_type'\n",
        "     var: 'Length',\n",
-       " 'oligodendrytes_ko': View of AnnData object with n_obs × n_vars = 19 × 21907\n",
+       " 'oligodendrytes_ko': View of AnnData object with n_obs × n_vars = 19 × 25854\n",
        "     obs: 'orig.ident', 'nCount_RNA', 'nFeature_RNA', 'seq_folder', 'nUMI', 'nGene', 'log10GenesPerUMI', 'mitoRatio', 'cells', 'sample', 'sample_mouseID', 'sample_litter', 'sample_treatment', 'sample_sex', 'RNA_snn_res.0.9', 'seurat_clusters', 'cell_type'\n",
        "     var: 'Length',\n",
-       " 'astrocytes_wt': View of AnnData object with n_obs × n_vars = 23 × 21907\n",
+       " 'astrocytes_wt': View of AnnData object with n_obs × n_vars = 23 × 25854\n",
        "     obs: 'orig.ident', 'nCount_RNA', 'nFeature_RNA', 'seq_folder', 'nUMI', 'nGene', 'log10GenesPerUMI', 'mitoRatio', 'cells', 'sample', 'sample_mouseID', 'sample_litter', 'sample_treatment', 'sample_sex', 'RNA_snn_res.0.9', 'seurat_clusters', 'cell_type'\n",
        "     var: 'Length',\n",
-       " 'astrocytes_ko': View of AnnData object with n_obs × n_vars = 27 × 21907\n",
+       " 'astrocytes_ko': View of AnnData object with n_obs × n_vars = 27 × 25854\n",
        "     obs: 'orig.ident', 'nCount_RNA', 'nFeature_RNA', 'seq_folder', 'nUMI', 'nGene', 'log10GenesPerUMI', 'mitoRatio', 'cells', 'sample', 'sample_mouseID', 'sample_litter', 'sample_treatment', 'sample_sex', 'RNA_snn_res.0.9', 'seurat_clusters', 'cell_type'\n",
        "     var: 'Length',\n",
-       " 'neurons_wt': View of AnnData object with n_obs × n_vars = 15 × 21907\n",
+       " 'neurons_wt': View of AnnData object with n_obs × n_vars = 15 × 25854\n",
        "     obs: 'orig.ident', 'nCount_RNA', 'nFeature_RNA', 'seq_folder', 'nUMI', 'nGene', 'log10GenesPerUMI', 'mitoRatio', 'cells', 'sample', 'sample_mouseID', 'sample_litter', 'sample_treatment', 'sample_sex', 'RNA_snn_res.0.9', 'seurat_clusters', 'cell_type'\n",
        "     var: 'Length',\n",
-       " 'neurons_ko': View of AnnData object with n_obs × n_vars = 31 × 21907\n",
+       " 'neurons_ko': View of AnnData object with n_obs × n_vars = 31 × 25854\n",
        "     obs: 'orig.ident', 'nCount_RNA', 'nFeature_RNA', 'seq_folder', 'nUMI', 'nGene', 'log10GenesPerUMI', 'mitoRatio', 'cells', 'sample', 'sample_mouseID', 'sample_litter', 'sample_treatment', 'sample_sex', 'RNA_snn_res.0.9', 'seurat_clusters', 'cell_type'\n",
        "     var: 'Length'}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,14 +522,14 @@
     "for celltype in annotation.values():\n",
     "    for sample in ['wt', 'ko']:\n",
     "        tmp = adata[(adata.obs.cell_type == celltype) & (adata.obs['sample'] == sample), :].copy()\n",
-    "        data[celltype + '_' + sample] = tmp[:, np.array((adata.X > 0).sum(axis = 0)).flatten() > 3]\n",
+    "        data[celltype + '_' + sample] = tmp[:, ~(np.array((adata.X > 0).sum(axis = 0)).flatten() == 0)]\n",
     "data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "convinced-burlington",
+   "execution_count": 15,
+   "id": "daily-synthetic",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "provincial-wagner",
+   "id": "amino-interval",
    "metadata": {},
    "source": [
     "## Preparing featureCounts and Salmon quantification for Compass"
@@ -550,72 +550,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "assured-isolation",
+   "execution_count": 17,
+   "id": "creative-worst",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'featureCounts': {'olfactory_cells_wt': AnnData object with n_obs × n_vars = 32 × 23897\n",
+       "{'featureCounts': {'olfactory_cells_wt': AnnData object with n_obs × n_vars = 32 × 40436\n",
        "      obs: 'sample_description', 'sample_genotype', 'sample_treatment', 'sample_sex', 'sample_litter', 'sample_mouseID', 'nCount_RNA', 'nFeature_RNA', 'percent_mt', 'percent_ribo', 'leiden_r0.25', 'leiden_r0.5', 'leiden_r0.75', 'leiden_r1', 'cell_type'\n",
        "      var: 'Length',\n",
-       "  'olfactory_cells_ko': AnnData object with n_obs × n_vars = 20 × 23897\n",
+       "  'olfactory_cells_ko': AnnData object with n_obs × n_vars = 20 × 40436\n",
        "      obs: 'sample_description', 'sample_genotype', 'sample_treatment', 'sample_sex', 'sample_litter', 'sample_mouseID', 'nCount_RNA', 'nFeature_RNA', 'percent_mt', 'percent_ribo', 'leiden_r0.25', 'leiden_r0.5', 'leiden_r0.75', 'leiden_r1', 'cell_type'\n",
        "      var: 'Length',\n",
-       "  'oligodendrytes_wt': AnnData object with n_obs × n_vars = 32 × 23897\n",
+       "  'oligodendrytes_wt': AnnData object with n_obs × n_vars = 32 × 40436\n",
        "      obs: 'sample_description', 'sample_genotype', 'sample_treatment', 'sample_sex', 'sample_litter', 'sample_mouseID', 'nCount_RNA', 'nFeature_RNA', 'percent_mt', 'percent_ribo', 'leiden_r0.25', 'leiden_r0.5', 'leiden_r0.75', 'leiden_r1', 'cell_type'\n",
        "      var: 'Length',\n",
-       "  'oligodendrytes_ko': AnnData object with n_obs × n_vars = 15 × 23897\n",
+       "  'oligodendrytes_ko': AnnData object with n_obs × n_vars = 15 × 40436\n",
        "      obs: 'sample_description', 'sample_genotype', 'sample_treatment', 'sample_sex', 'sample_litter', 'sample_mouseID', 'nCount_RNA', 'nFeature_RNA', 'percent_mt', 'percent_ribo', 'leiden_r0.25', 'leiden_r0.5', 'leiden_r0.75', 'leiden_r1', 'cell_type'\n",
        "      var: 'Length',\n",
-       "  'astrocytes_wt': AnnData object with n_obs × n_vars = 22 × 23897\n",
+       "  'astrocytes_wt': AnnData object with n_obs × n_vars = 22 × 40436\n",
        "      obs: 'sample_description', 'sample_genotype', 'sample_treatment', 'sample_sex', 'sample_litter', 'sample_mouseID', 'nCount_RNA', 'nFeature_RNA', 'percent_mt', 'percent_ribo', 'leiden_r0.25', 'leiden_r0.5', 'leiden_r0.75', 'leiden_r1', 'cell_type'\n",
        "      var: 'Length',\n",
-       "  'astrocytes_ko': AnnData object with n_obs × n_vars = 27 × 23897\n",
+       "  'astrocytes_ko': AnnData object with n_obs × n_vars = 27 × 40436\n",
        "      obs: 'sample_description', 'sample_genotype', 'sample_treatment', 'sample_sex', 'sample_litter', 'sample_mouseID', 'nCount_RNA', 'nFeature_RNA', 'percent_mt', 'percent_ribo', 'leiden_r0.25', 'leiden_r0.5', 'leiden_r0.75', 'leiden_r1', 'cell_type'\n",
        "      var: 'Length',\n",
-       "  'neurons_wt': AnnData object with n_obs × n_vars = 15 × 23897\n",
+       "  'neurons_wt': AnnData object with n_obs × n_vars = 15 × 40436\n",
        "      obs: 'sample_description', 'sample_genotype', 'sample_treatment', 'sample_sex', 'sample_litter', 'sample_mouseID', 'nCount_RNA', 'nFeature_RNA', 'percent_mt', 'percent_ribo', 'leiden_r0.25', 'leiden_r0.5', 'leiden_r0.75', 'leiden_r1', 'cell_type'\n",
        "      var: 'Length',\n",
-       "  'neurons_ko': AnnData object with n_obs × n_vars = 31 × 23897\n",
+       "  'neurons_ko': AnnData object with n_obs × n_vars = 31 × 40436\n",
        "      obs: 'sample_description', 'sample_genotype', 'sample_treatment', 'sample_sex', 'sample_litter', 'sample_mouseID', 'nCount_RNA', 'nFeature_RNA', 'percent_mt', 'percent_ribo', 'leiden_r0.25', 'leiden_r0.5', 'leiden_r0.75', 'leiden_r1', 'cell_type'\n",
        "      var: 'Length'},\n",
-       " 'salmon': {'olfactory_cells_wt': AnnData object with n_obs × n_vars = 36 × 24500\n",
+       " 'salmon': {'olfactory_cells_wt': AnnData object with n_obs × n_vars = 36 × 40399\n",
        "      obs: 'sample_description', 'sample_genotype', 'sample_treatment', 'sample_sex', 'sample_litter', 'sample_mouseID', 'nCount_RNA', 'nFeature_RNA', 'percent_mt', 'percent_ribo', 'leiden_r0.25', 'leiden_r0.5', 'leiden_r0.75', 'leiden_r1', 'cell_type'\n",
        "      var: 'Length', 'gencode_id'\n",
        "      layers: 'counts', 'tpm',\n",
-       "  'olfactory_cells_ko': AnnData object with n_obs × n_vars = 22 × 24500\n",
+       "  'olfactory_cells_ko': AnnData object with n_obs × n_vars = 22 × 40399\n",
        "      obs: 'sample_description', 'sample_genotype', 'sample_treatment', 'sample_sex', 'sample_litter', 'sample_mouseID', 'nCount_RNA', 'nFeature_RNA', 'percent_mt', 'percent_ribo', 'leiden_r0.25', 'leiden_r0.5', 'leiden_r0.75', 'leiden_r1', 'cell_type'\n",
        "      var: 'Length', 'gencode_id'\n",
        "      layers: 'counts', 'tpm',\n",
-       "  'oligodendrytes_wt': AnnData object with n_obs × n_vars = 27 × 24500\n",
+       "  'oligodendrytes_wt': AnnData object with n_obs × n_vars = 27 × 40399\n",
        "      obs: 'sample_description', 'sample_genotype', 'sample_treatment', 'sample_sex', 'sample_litter', 'sample_mouseID', 'nCount_RNA', 'nFeature_RNA', 'percent_mt', 'percent_ribo', 'leiden_r0.25', 'leiden_r0.5', 'leiden_r0.75', 'leiden_r1', 'cell_type'\n",
        "      var: 'Length', 'gencode_id'\n",
        "      layers: 'counts', 'tpm',\n",
-       "  'oligodendrytes_ko': AnnData object with n_obs × n_vars = 14 × 24500\n",
+       "  'oligodendrytes_ko': AnnData object with n_obs × n_vars = 14 × 40399\n",
        "      obs: 'sample_description', 'sample_genotype', 'sample_treatment', 'sample_sex', 'sample_litter', 'sample_mouseID', 'nCount_RNA', 'nFeature_RNA', 'percent_mt', 'percent_ribo', 'leiden_r0.25', 'leiden_r0.5', 'leiden_r0.75', 'leiden_r1', 'cell_type'\n",
        "      var: 'Length', 'gencode_id'\n",
        "      layers: 'counts', 'tpm',\n",
-       "  'astrocytes_wt': AnnData object with n_obs × n_vars = 23 × 24500\n",
+       "  'astrocytes_wt': AnnData object with n_obs × n_vars = 23 × 40399\n",
        "      obs: 'sample_description', 'sample_genotype', 'sample_treatment', 'sample_sex', 'sample_litter', 'sample_mouseID', 'nCount_RNA', 'nFeature_RNA', 'percent_mt', 'percent_ribo', 'leiden_r0.25', 'leiden_r0.5', 'leiden_r0.75', 'leiden_r1', 'cell_type'\n",
        "      var: 'Length', 'gencode_id'\n",
        "      layers: 'counts', 'tpm',\n",
-       "  'astrocytes_ko': AnnData object with n_obs × n_vars = 27 × 24500\n",
+       "  'astrocytes_ko': AnnData object with n_obs × n_vars = 27 × 40399\n",
        "      obs: 'sample_description', 'sample_genotype', 'sample_treatment', 'sample_sex', 'sample_litter', 'sample_mouseID', 'nCount_RNA', 'nFeature_RNA', 'percent_mt', 'percent_ribo', 'leiden_r0.25', 'leiden_r0.5', 'leiden_r0.75', 'leiden_r1', 'cell_type'\n",
        "      var: 'Length', 'gencode_id'\n",
        "      layers: 'counts', 'tpm',\n",
-       "  'neurons_wt': AnnData object with n_obs × n_vars = 15 × 24500\n",
+       "  'neurons_wt': AnnData object with n_obs × n_vars = 15 × 40399\n",
        "      obs: 'sample_description', 'sample_genotype', 'sample_treatment', 'sample_sex', 'sample_litter', 'sample_mouseID', 'nCount_RNA', 'nFeature_RNA', 'percent_mt', 'percent_ribo', 'leiden_r0.25', 'leiden_r0.5', 'leiden_r0.75', 'leiden_r1', 'cell_type'\n",
        "      var: 'Length', 'gencode_id'\n",
        "      layers: 'counts', 'tpm',\n",
-       "  'neurons_ko': AnnData object with n_obs × n_vars = 30 × 24500\n",
+       "  'neurons_ko': AnnData object with n_obs × n_vars = 30 × 40399\n",
        "      obs: 'sample_description', 'sample_genotype', 'sample_treatment', 'sample_sex', 'sample_litter', 'sample_mouseID', 'nCount_RNA', 'nFeature_RNA', 'percent_mt', 'percent_ribo', 'leiden_r0.25', 'leiden_r0.5', 'leiden_r0.75', 'leiden_r1', 'cell_type'\n",
        "      var: 'Length', 'gencode_id'\n",
        "      layers: 'counts', 'tpm'}}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -637,7 +637,7 @@
     "    for celltype in annotation.values():\n",
     "        for sample in ['wt', 'ko']:\n",
     "            tmp_adata = adata[(adata.obs.cell_type == celltype) & (adata.obs['sample_genotype'] == sample), :].copy()\n",
-    "            tmp[celltype + '_' + sample] = tmp_adata[:, np.array((adata.X > 0).sum(axis = 0)).flatten() > 3].copy()\n",
+    "            tmp[celltype + '_' + sample] = tmp_adata[:, ~(np.array((adata.X > 0).sum(axis = 0)).flatten() == 0)].copy()\n",
     "    \n",
     "    data[key] = tmp\n",
     "\n",
@@ -646,8 +646,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "violent-physiology",
+   "execution_count": 18,
+   "id": "prescription-grammar",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hairy-teacher",
+   "id": "expressed-fence",
    "metadata": {},
    "source": [
     "## Preparing bulk RNAseq for Compass"
@@ -684,8 +684,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "weird-sister",
+   "execution_count": 19,
+   "id": "proud-relative",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -729,8 +729,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "parental-calculator",
+   "execution_count": 20,
+   "id": "governmental-person",
    "metadata": {},
    "outputs": [
     {
@@ -845,7 +845,7 @@
        "5      81451   AATGAA       ko        P1   m       2     7054  C_ko"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -857,8 +857,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "controlled-glenn",
+   "execution_count": 21,
+   "id": "latter-victory",
    "metadata": {},
    "outputs": [
     {
@@ -867,7 +867,7 @@
        "{'wt': [81446, 81448, 81450], 'ko': [81447, 81449, 81451]}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -881,8 +881,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "physical-money",
+   "execution_count": 22,
+   "id": "second-software",
    "metadata": {},
    "outputs": [
     {
@@ -1061,7 +1061,7 @@
        "[54456 rows x 7 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1095,8 +1095,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "crazy-innocent",
+   "execution_count": 23,
+   "id": "greater-flooring",
    "metadata": {},
    "outputs": [
     {
@@ -1287,7 +1287,7 @@
        "[54456 rows x 8 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1308,8 +1308,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "eleven-radical",
+   "execution_count": 24,
+   "id": "young-dress",
    "metadata": {},
    "outputs": [
     {
@@ -1350,8 +1350,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "empty-female",
+   "execution_count": 25,
+   "id": "endless-pastor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1366,12 +1366,20 @@
     "    for key2, sampleids in sample_type.items():\n",
     "        sampleids = [str(i) for i in sampleids]\n",
     "        tmp = df.loc[:, sampleids]\n",
-    "        tmp = tmp.loc[(df.loc[:, sampleids] > 0).sum(axis = 1) == 3, :]\n",
+    "        tmp = tmp.loc[~((df.loc[:, sampleids] > 0).sum(axis = 1) == 0), :]\n",
     "        tmp.to_csv(\n",
     "            path + f'/{key2}.expression.tsv',\n",
     "            sep = '\\t'\n",
     "        )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fuzzy-council",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
