fixing error in tpm conversion for compass and saving plots as html

--- a/notebooks/compass_preparation.ipynb
+++ b/notebooks/compass_preparation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "injured-outline",
+   "id": "embedded-dollar",
    "metadata": {},
    "source": [
     "# Data preparation for [Compass](https://github.com/YosefLab/Compass)"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "nuclear-marshall",
+   "id": "italian-klein",
    "metadata": {},
    "source": [
     "## Preparing novarino processed data for Compass"
@@ -18,8 +18,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "pursuant-polish",
+   "execution_count": 30,
+   "id": "emotional-angola",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,14 +36,34 @@
     "    factors = X.sum(axis = 0) / scale\n",
     "    return X.T / factors[:, None]\n",
     "\n",
-    "def write_expression(adataobj, file, layer = None, normalize = True):\n",
+    "def normalize_wtpm(adata, scale = 1e4):\n",
+    "    '''\n",
+    "    this function normalizes the data with a bug which turned out to might be useful\n",
+    "    i.e. it multiplies rpk sums by scale instead of dividing them \n",
+    "    '''\n",
+    "    X = adata.X.toarray().T / adata.var.Length.values[:, None] * 1000\n",
+    "    factors = X.sum(axis = 0) * scale\n",
+    "    return X.T / factors[:, None]\n",
+    "\n",
+    "def normalize_cpm(adata, scale = 1e6):\n",
+    "    X = adata.X.toarray().T \n",
+    "    factors = X.sum(axis = 0) / scale\n",
+    "    return X.T / factors[:, None]\n",
+    "\n",
+    "def write_expression(adataobj, file, layer = None, normalize = 'tpm'):\n",
     "    adataobj = adataobj.copy()\n",
     "    if layer:\n",
     "        adataobj.X = adataobj.layers[layer]\n",
     "    \n",
-    "    if normalize:\n",
+    "    if normalize == 'tpm':\n",
     "        X = normalize_tpm(adataobj)\n",
+    "        \n",
+    "    elif normalize == 'cpm':\n",
+    "        X = normalize_cpm(adataobj)\n",
     "    \n",
+    "    elif normalize == 'wtpm':\n",
+    "        X = normalize_wtpm(adataobj)\n",
+    "        \n",
     "    else:\n",
     "        X = adataobj.X\n",
     "    \n",
@@ -86,8 +106,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "military-blanket",
+   "execution_count": 31,
+   "id": "close-wages",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +117,7 @@
        "    obs: 'orig.ident', 'nCount_RNA', 'nFeature_RNA', 'seq_folder', 'nUMI', 'nGene', 'log10GenesPerUMI', 'mitoRatio', 'cells', 'sample', 'sample_mouseID', 'sample_litter', 'sample_treatment', 'sample_sex', 'RNA_snn_res.0.9', 'seurat_clusters'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,8 +129,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "entire-diesel",
+   "execution_count": 32,
+   "id": "female-prague",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,8 +145,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "worthy-waste",
+   "execution_count": 33,
+   "id": "related-float",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,8 +155,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "geographic-sally",
+   "execution_count": 34,
+   "id": "dominican-complement",
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +481,7 @@
        "[203 rows x 17 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,8 +499,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "stone-breeding",
+   "execution_count": 35,
+   "id": "broken-fifth",
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +532,7 @@
        "     var: 'Length'}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,21 +548,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "daily-synthetic",
+   "execution_count": 37,
+   "id": "paperback-finland",
    "metadata": {},
    "outputs": [],
    "source": [
     "for key in data.keys():\n",
     "    write_expression(\n",
     "        data[key], \n",
-    "        f'../processed/novarino/{key}.expression.tsv',\n",
+    "        f'../processed/novarino_wtpm/{key}.expression.tsv',\n",
+    "        normalize = 'wtpm'\n",
     "    )"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "amino-interval",
+   "id": "unauthorized-terror",
    "metadata": {},
    "source": [
     "## Preparing featureCounts and Salmon quantification for Compass"
@@ -550,8 +571,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "creative-worst",
+   "execution_count": 38,
+   "id": "caroline-aaron",
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +636,7 @@
        "      layers: 'counts', 'tpm'}}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,8 +667,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "prescription-grammar",
+   "execution_count": 39,
+   "id": "herbal-snake",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,22 +682,23 @@
     "for key2, adata in data[key1].items():\n",
     "    write_expression(\n",
     "        adata, \n",
-    "        f'../processed/{key1}/{key2}.expression.tsv',\n",
-    "        normalize = False,\n",
-    "        layer = 'tpm'\n",
+    "        f'../processed/{key1}_wtpm/{key2}.expression.tsv',\n",
+    "        layer = 'counts',\n",
+    "        normalize = 'wtpm'\n",
     "    )\n",
     "    \n",
     "key1 = 'featureCounts'\n",
     "for key2, adata in data[key1].items():\n",
     "    write_expression(\n",
     "        adata, \n",
-    "        f'../processed/{key1}/{key2}.expression.tsv',\n",
+    "        f'../processed/{key1}_wtpm/{key2}.expression.tsv',\n",
+    "        normalize = 'wtpm'\n",
     "    )"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "expressed-fence",
+   "id": "close-missile",
    "metadata": {},
    "source": [
     "## Preparing bulk RNAseq for Compass"
@@ -684,8 +706,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "proud-relative",
+   "execution_count": 12,
+   "id": "vocational-patient",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -729,8 +751,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "governmental-person",
+   "execution_count": 13,
+   "id": "painful-photograph",
    "metadata": {},
    "outputs": [
     {
@@ -845,7 +867,7 @@
        "5      81451   AATGAA       ko        P1   m       2     7054  C_ko"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -857,8 +879,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "latter-victory",
+   "execution_count": 14,
+   "id": "retired-praise",
    "metadata": {},
    "outputs": [
     {
@@ -867,7 +889,7 @@
        "{'wt': [81446, 81448, 81450], 'ko': [81447, 81449, 81451]}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -881,8 +903,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "second-software",
+   "execution_count": 15,
+   "id": "committed-touch",
    "metadata": {},
    "outputs": [
     {
@@ -1061,7 +1083,7 @@
        "[54456 rows x 7 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1095,8 +1117,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "greater-flooring",
+   "execution_count": 16,
+   "id": "subsequent-stockholm",
    "metadata": {},
    "outputs": [
     {
@@ -1287,7 +1309,7 @@
        "[54456 rows x 8 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1308,8 +1330,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "young-dress",
+   "execution_count": 17,
+   "id": "casual-campbell",
    "metadata": {},
    "outputs": [
     {
@@ -1351,7 +1373,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "endless-pastor",
+   "id": "adopted-stupid",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1376,7 +1398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fuzzy-council",
+   "id": "fatty-productivity",
    "metadata": {},
    "outputs": [],
    "source": []
