--- a/notebooks/metabo_analysis.ipynb
+++ b/notebooks/metabo_analysis.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 36,
    "id": "b38e9f7f-b611-46bc-9b1d-93cd81030e70",
    "metadata": {},
    "outputs": [],
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 37,
    "id": "05ffc7aa-899f-4b86-9886-c925b039e266",
    "metadata": {},
    "outputs": [
@@ -529,7 +529,7 @@
        "[154 rows x 73 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 38,
    "id": "2c8f80d1-8e1b-4027-97a5-c12d5208dda2",
    "metadata": {},
    "outputs": [
@@ -943,7 +943,7 @@
        "[227 rows x 73 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -954,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 43,
    "id": "e1af1069-9c60-47d6-8678-cae92904e8ff",
    "metadata": {},
    "outputs": [],
@@ -1017,10 +1017,179 @@
     "        hilic,\n",
     "        columns,\n",
     "        condition,\n",
-    "        '../raw/metabolomics_hilic'\n",
-    "    )\n",
-    "    \n",
-    "selection = get_ipath_selection(hilic, 'KEGG', '#000000', 20)"
+    "        '../processed/metabolomics_hilic'\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "31cb18bd-1033-4c90-9557-53cd800d70d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C00022 #ff00ff W10\n",
+      "C00041 #ff00ff W10\n",
+      "C00213 #ff00ff W10\n",
+      "C00186 #ff00ff W10\n",
+      "C00116 #ff00ff W10\n",
+      "C01026 #ff00ff W10\n",
+      "C00334 #ff00ff W10\n",
+      "C01089 #ff00ff W10\n",
+      "C00065 #ff00ff W10\n",
+      "C00519 #ff00ff W10\n",
+      "C00106 #ff00ff W10\n",
+      "C00791 #ff00ff W10\n",
+      "C00148 #ff00ff W10\n",
+      "C00581 #ff00ff W10\n",
+      "C00719 #ff00ff W10\n",
+      "C00188 #ff00ff W10\n",
+      "C00263 #ff00ff W10\n",
+      "C07182 #ff00ff W10\n",
+      "C00153 #ff00ff W10\n",
+      "C00245 #ff00ff W10\n",
+      "C01879 #ff00ff W10\n",
+      "C00408 #ff00ff W10\n",
+      "C00233 #ff00ff W10\n",
+      "C02714 #ff00ff W10\n",
+      "C01157 #ff00ff W10\n",
+      "C00123 #ff00ff W10\n",
+      "C00407 #ff00ff W10\n",
+      "C00152 #ff00ff W10\n",
+      "C00077 #ff00ff W10\n",
+      "C00049 #ff00ff W10\n",
+      "C00262 #ff00ff W10\n",
+      "C00064 #ff00ff W10\n",
+      "C00047 #ff00ff W10\n",
+      "C00025 #ff00ff W10\n",
+      "C00979 #ff00ff W10\n",
+      "C00073 #ff00ff W10\n",
+      "C00242 #ff00ff W10\n",
+      "C00385 #ff00ff W10\n",
+      "C00295 #ff00ff W10\n",
+      "C01551 #ff00ff W10\n",
+      "C00956 #ff00ff W10\n",
+      "C00318 #ff00ff W10\n",
+      "C02989 #ff00ff W10\n",
+      "C00079 #ff00ff W10\n",
+      "C00074 #ff00ff W10\n",
+      "C00366 #ff00ff W10\n",
+      "C01152 #ff00ff W10\n",
+      "C00111 #ff00ff W10\n",
+      "C00093 #ff00ff W10\n",
+      "C03771 #ff00ff W10\n",
+      "C00062 #ff00ff W10\n",
+      "C00327 #ff00ff W10\n",
+      "C00072 #ff00ff W10\n",
+      "C00082 #ff00ff W10\n",
+      "C03964 #ff00ff W10\n",
+      "C00597 #ff00ff W10\n",
+      "C00158 #ff00ff W10\n",
+      "C00257 #ff00ff W10\n",
+      "C03626 #ff00ff W10\n",
+      "C00078 #ff00ff W10\n",
+      "C00328 #ff00ff W10\n",
+      "C02305 #ff00ff W10\n",
+      "C02291 #ff00ff W10\n",
+      "C00386 #ff00ff W10\n",
+      "C00881 #ff00ff W10\n",
+      "C00199 #ff00ff W10\n",
+      "C00214 #ff00ff W10\n",
+      "C00475 #ff00ff W10\n",
+      "C00299 #ff00ff W10\n",
+      "C00670 #ff00ff W10\n",
+      "C00103 #ff00ff W10\n",
+      "C00092 #ff00ff W10\n",
+      "C00378 #ff00ff W10\n",
+      "C00212 #ff00ff W10\n",
+      "C00294 #ff00ff W10\n",
+      "C00345 #ff00ff W10\n",
+      "C00387 #ff00ff W10\n",
+      "C05382 #ff00ff W10\n",
+      "C03406 #ff00ff W10\n",
+      "C00777 #ff00ff W10\n",
+      "C00051 #ff00ff W10\n",
+      "C00364 #ff00ff W10\n",
+      "C00055 #ff00ff W10\n",
+      "C00105 #ff00ff W10\n",
+      "C00354 #ff00ff W10\n",
+      "C00020 #ff00ff W10\n",
+      "C00130 #ff00ff W10\n",
+      "C00144 #ff00ff W10\n",
+      "C00255 #ff00ff W10\n",
+      "C00021 #ff00ff W10\n",
+      "C00019 #ff00ff W10\n",
+      "C00363 #ff00ff W10\n",
+      "C00112 #ff00ff W10\n",
+      "C02477 #ff00ff W10\n",
+      "C00035 #ff00ff W10\n",
+      "C00570 #ff00ff W10\n",
+      "C00063 #ff00ff W10\n",
+      "C00307 #ff00ff W10\n",
+      "C00002 #ff00ff W10\n",
+      "C05122 #ff00ff W10\n",
+      "C00044 #ff00ff W10\n",
+      "C00029 #ff00ff W10\n",
+      "C00043 #ff00ff W10\n",
+      "C00127 #ff00ff W10\n",
+      "C00005 #ff00ff W10\n",
+      "C00010 #ff00ff W10\n",
+      "C00016 #ff00ff W10\n",
+      "C00114 #ff00ff W10\n",
+      "D02308 #ff00ff W10\n",
+      "C15526 #ff00ff W10\n",
+      "C02835 #ff00ff W10\n",
+      "C00300 #ff00ff W10\n",
+      "C00711 #ff00ff W10\n",
+      "C01620 #ff00ff W10\n",
+      "C05828 #ff00ff W10\n",
+      "C00346 #ff00ff W10\n",
+      "C01087 #ff00ff W10\n",
+      "C00532 #ff00ff W10\n",
+      "C00606 #ff00ff W10\n",
+      "C10129 #ff00ff W10\n",
+      "C01601 #ff00ff W10\n",
+      "C07471 #ff00ff W10\n",
+      "C02242 #ff00ff W10\n",
+      "C00417 #ff00ff W10\n",
+      "C01042 #ff00ff W10\n",
+      "D02780 #ff00ff W10\n",
+      "D00062 #ff00ff W10\n",
+      "C03793 #ff00ff W10\n",
+      "C02712 #ff00ff W10\n",
+      "C08038 #ff00ff W10\n",
+      "C03017 #ff00ff W10\n",
+      "C06424 #ff00ff W10\n",
+      "C00620 #ff00ff W10\n",
+      "C02067 #ff00ff W10\n",
+      "C08031 #ff00ff W10\n",
+      "C05282 #ff00ff W10\n",
+      "C08315 #ff00ff W10\n",
+      "C01595 #ff00ff W10\n",
+      "C19670 #ff00ff W10\n",
+      "C01530 #ff00ff W10\n",
+      "C00170 #ff00ff W10\n",
+      "C12270 #ff00ff W10\n",
+      "C00219 #ff00ff W10\n",
+      "C03242 #ff00ff W10\n",
+      "C16525 #ff00ff W10\n",
+      "C19909 #ff00ff W10\n",
+      "C06429 #ff00ff W10\n",
+      "C16513 #ff00ff W10\n",
+      "C16527 #ff00ff W10\n",
+      "C01083 #ff00ff W10\n",
+      "C00015 #ff00ff W10\n",
+      "C00008 #ff00ff W10\n",
+      "C00167 #ff00ff W10\n",
+      "C00096 #ff00ff W10\n"
+     ]
+    }
+   ],
+   "source": [
+    "selection = get_ipath_selection(hilic, 'KEGG', '#ff00ff', 10)"
    ]
   },
   {
