add enrichment analysis

--- a/notebooks/metabo_analysis.ipynb
+++ b/notebooks/metabo_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "reverse-actress",
+   "id": "educated-purse",
    "metadata": {},
    "source": [
     "# Prepare metabolomics data for ipath ingestion\n",
@@ -17,26 +17,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "grave-commissioner",
+   "execution_count": 1,
+   "id": "perfect-individual",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import csv\n",
     "import requests\n",
-    "def compounds_to_kegg(compounds):\n",
-    "    url = \"http://api.xialab.ca/mapcompounds\"\n",
-    "\n",
-    "    payload = '{\\n\\t\"queryList\": \"' + ';'.join(compounds) + ';\",\\n\\t\"inputType\": \"name\"\\n}'\n",
-    "    headers = {\n",
-    "        'Content-Type': \"application/json\",\n",
-    "        'cache-control': \"no-cache\",\n",
-    "    }\n",
-    "\n",
-    "    response = requests.request(\"POST\", url, data=payload, headers=headers)\n",
-    "\n",
-    "    return response.text\n",
     "\n",
     "def get_unambiguous_column_names(column_names):\n",
     "    series = pd.Series(column_names)\n",
@@ -125,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "dedicated-bishop",
+   "id": "severe-mineral",
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "female-landscape",
+   "id": "impressed-anthropology",
    "metadata": {},
    "outputs": [
     {
@@ -956,8 +944,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "rising-commercial",
+   "execution_count": 7,
+   "id": "pleased-waters",
    "metadata": {},
    "outputs": [
     {
@@ -1145,7 +1133,12 @@
     "def write_foldchanges(df, columns, condition, prefix):\n",
     "    # writing base values for t0\n",
     "    tmp = pd.DataFrame(\n",
-    "        [['KEGG', 0] for kegg in df.KEGG]\n",
+    "        get_ipath_selection(\n",
+    "            hilic, \n",
+    "            'KEGG', \n",
+    "            '#000000', \n",
+    "            20\n",
+    "        )\n",
     "    )\n",
     "    tmp.to_csv(\n",
     "        '_'.join([prefix, 'base', condition]) + '.tsv',\n",
@@ -1195,7 +1188,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "under-tyler",
+   "id": "dietary-library",
    "metadata": {},
    "outputs": [
     {
@@ -1616,7 +1609,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "republican-veteran",
+   "id": "expected-arlington",
    "metadata": {},
    "outputs": [
     {
@@ -1773,7 +1766,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "geographic-rally",
+   "id": "indirect-comparison",
    "metadata": {},
    "outputs": [
     {
@@ -1908,7 +1901,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "nearby-planning",
+   "id": "robust-efficiency",
    "metadata": {},
    "outputs": [
     {
@@ -1971,8 +1964,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "intense-france",
+   "execution_count": 29,
+   "id": "executive-style",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2056,13 +2049,7 @@
     "        \n",
     "        else:\n",
     "            if current_key in record_parsers.keys():\n",
-    "                try:\n",
-    "                    key, val = record_parsers[current_key](line.strip())\n",
-    "                    \n",
-    "                except Exception as e:\n",
-    "                    print(current_key, line)\n",
-    "                    raise e\n",
-    "                    \n",
+    "                key, val = record_parsers[current_key](line.strip()) \n",
     "                entries[key] = val\n",
     "            \n",
     "            else:\n",
@@ -2110,8 +2097,208 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "cleared-nature",
+   "execution_count": 4,
+   "id": "integral-prompt",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "with open('../raw/kegg_pathway_maps.pickle', 'rb') as handle:\n",
+    "    pathwaymaps = pickle.load(handle)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "identical-dragon",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def select_maps(pathwaydict, class_contains):\n",
+    "    selection = {}\n",
+    "    for k, v in pathwaydict.items():\n",
+    "        if 'CLASS' in v and any([pattern in v['CLASS'][0].lower() for pattern in class_contains]):\n",
+    "            selection[k] = v\n",
+    "            \n",
+    "    return selection\n",
+    "\n",
+    "selected_pathways = select_maps(\n",
+    "    pathwaymaps,\n",
+    "    ['metabolism', 'information processing']\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "expensive-dairy",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mapid</th>\n",
+       "      <th>ncommon</th>\n",
+       "      <th>ncompounds</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>mmu00010</td>\n",
+       "      <td>0</td>\n",
+       "      <td>31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>mmu00020</td>\n",
+       "      <td>0</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>mmu00030</td>\n",
+       "      <td>2</td>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>mmu00040</td>\n",
+       "      <td>2</td>\n",
+       "      <td>58</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>mmu00051</td>\n",
+       "      <td>1</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>102</th>\n",
+       "      <td>mmu04310</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>103</th>\n",
+       "      <td>mmu04340</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>104</th>\n",
+       "      <td>mmu04370</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>105</th>\n",
+       "      <td>mmu04371</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>106</th>\n",
+       "      <td>mmu04512</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>107 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        mapid  ncommon  ncompounds\n",
+       "0    mmu00010        0          31\n",
+       "1    mmu00020        0          20\n",
+       "2    mmu00030        2          35\n",
+       "3    mmu00040        2          58\n",
+       "4    mmu00051        1          54\n",
+       "..        ...      ...         ...\n",
+       "102  mmu04310        0           1\n",
+       "103  mmu04340        0           1\n",
+       "104  mmu04370        0           6\n",
+       "105  mmu04371        0           9\n",
+       "106  mmu04512        0           1\n",
+       "\n",
+       "[107 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def compute_overlaps(diff_compounds, pathways):\n",
+    "    diff_compounds = set(diff_compounds)\n",
+    "    overlaps = []\n",
+    "    for key, pathway in pathways.items():\n",
+    "        if 'COMPOUND' in pathway:\n",
+    "            overlaps.append(\n",
+    "                [\n",
+    "                    key, \n",
+    "                    len(\n",
+    "                        diff_compounds.intersection(\n",
+    "                            set(pathway['COMPOUND'].keys())\n",
+    "                        )\n",
+    "                    ),\n",
+    "                    len(pathway['COMPOUND'].keys())\n",
+    "                ]\n",
+    "            )\n",
+    "    \n",
+    "    return pd.DataFrame(overlaps, columns = ['mapid', 'ncommon', 'ncompounds'])\n",
+    "\n",
+    "pvalcol = '(P40, WT) / (P2, WT).1'\n",
+    "def get_diff_reg_compounds(df, pvalcol, logfoldcol, alpha = 0.05):\n",
+    "    upregulated = df.loc[\n",
+    "        (df[pvalcol].astype(float) <= alpha) & (df[logfoldcol].astype(float) > 0),\n",
+    "        ['KEGG', 'Name', pvalcol, logfoldcol]\n",
+    "    ]\n",
+    "    downregulated = df.loc[\n",
+    "        (df[pvalcol].astype(float) <= alpha) & (df[logfoldcol].astype(float) < 0),\n",
+    "        ['KEGG', 'Name', pvalcol, logfoldcol]\n",
+    "    ]\n",
+    "    return upregulated, downregulated\n",
+    "\n",
+    "upreg, downreg = get_diff_reg_compounds(\n",
+    "    hilic,\n",
+    "    pvalcol,\n",
+    "    pvalcol[:-2]\n",
+    ")\n",
+    "overlaps = compute_overlaps(upreg.KEGG.to_list(), selected_pathways)\n",
+    "overlaps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "three-bachelor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2142,8 +2329,176 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "id": "broadband-spokesman",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mapid</th>\n",
+       "      <th>ncommon</th>\n",
+       "      <th>ncompounds</th>\n",
+       "      <th>pvalue</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>mmu00010</td>\n",
+       "      <td>0</td>\n",
+       "      <td>31</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>mmu00020</td>\n",
+       "      <td>0</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>mmu00030</td>\n",
+       "      <td>2</td>\n",
+       "      <td>35</td>\n",
+       "      <td>0.840647</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>mmu00040</td>\n",
+       "      <td>2</td>\n",
+       "      <td>58</td>\n",
+       "      <td>0.977175</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>mmu00051</td>\n",
+       "      <td>1</td>\n",
+       "      <td>54</td>\n",
+       "      <td>0.995412</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>102</th>\n",
+       "      <td>mmu04310</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>103</th>\n",
+       "      <td>mmu04340</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>104</th>\n",
+       "      <td>mmu04370</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>105</th>\n",
+       "      <td>mmu04371</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>106</th>\n",
+       "      <td>mmu04512</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>107 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        mapid  ncommon  ncompounds    pvalue\n",
+       "0    mmu00010        0          31  1.000000\n",
+       "1    mmu00020        0          20  1.000000\n",
+       "2    mmu00030        2          35  0.840647\n",
+       "3    mmu00040        2          58  0.977175\n",
+       "4    mmu00051        1          54  0.995412\n",
+       "..        ...      ...         ...       ...\n",
+       "102  mmu04310        0           1  1.000000\n",
+       "103  mmu04340        0           1  1.000000\n",
+       "104  mmu04370        0           6  1.000000\n",
+       "105  mmu04371        0           9  1.000000\n",
+       "106  mmu04512        0           1  1.000000\n",
+       "\n",
+       "[107 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "M = 396\n",
+    "overlaps['pvalue'] = overlaps.apply(\n",
+    "    lambda x: pvalue(x.ncommon, M, x.ncompounds, len(upreg)),\n",
+    "    axis = 1\n",
+    ")\n",
+    "overlaps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "comfortable-passenger",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.08837643509167649"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "overlaps.pvalue.min()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "adjustable-discretion",
+   "id": "reliable-comment",
    "metadata": {},
    "outputs": [],
    "source": []
