fix map ids for iPATH

--- a/notebooks/metabo_analysis.ipynb
+++ b/notebooks/metabo_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "compact-trouble",
+   "id": "demographic-somalia",
    "metadata": {},
    "source": [
     "# Prepare metabolomics data for ipath ingestion\n",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "hired-selection",
+   "id": "swiss-administration",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "approximate-swedish",
+   "id": "lesbian-constant",
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "freelance-atlas",
+   "id": "cooperative-neighborhood",
    "metadata": {},
    "outputs": [
     {
@@ -945,7 +945,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "commercial-michigan",
+   "id": "applicable-intensity",
    "metadata": {},
    "outputs": [
     {
@@ -1188,7 +1188,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "liberal-vaccine",
+   "id": "committed-crown",
    "metadata": {},
    "outputs": [
     {
@@ -1609,7 +1609,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "considered-horizon",
+   "id": "filled-perspective",
    "metadata": {},
    "outputs": [
     {
@@ -1766,7 +1766,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "attached-understanding",
+   "id": "peripheral-order",
    "metadata": {},
    "outputs": [
     {
@@ -1901,7 +1901,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "certified-healing",
+   "id": "indian-merit",
    "metadata": {},
    "outputs": [
     {
@@ -1965,7 +1965,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "fatty-canada",
+   "id": "pediatric-programming",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2098,7 +2098,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "technical-university",
+   "id": "stretch-timothy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2110,7 +2110,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "devoted-builder",
+   "id": "moral-committee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2131,7 +2131,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "composed-thermal",
+   "id": "aging-helmet",
    "metadata": {},
    "outputs": [
     {
@@ -2342,7 +2342,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "hazardous-repository",
+   "id": "beneficial-prescription",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2393,7 +2393,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "placed-sweden",
+   "id": "nasty-uniform",
    "metadata": {},
    "outputs": [
     {
@@ -2615,7 +2615,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "alternative-cuisine",
+   "id": "featured-utilization",
    "metadata": {},
    "outputs": [
     {
@@ -2870,7 +2870,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "impressed-woman",
+   "id": "powerful-traffic",
    "metadata": {},
    "outputs": [
     {
@@ -3109,8 +3109,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "id": "peripheral-strengthening",
+   "execution_count": 76,
+   "id": "crude-hungary",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3120,6 +3120,10 @@
     "        .replace(', ', '_') \\\n",
     "        .replace(') / (', '_')\n",
     "    \n",
+    "    selection = selection.copy()\n",
+    "    \n",
+    "    # change mmu to map in order to conform with iPATH\n",
+    "    selection.loc['mapid'] = selection.mapid.str.replace('mmu', 'map')\n",
     "    selection.loc[:, ['mapid', 'median_foldchange']].to_csv(\n",
     "        '_'.join([prefix, suffix]) + '.tsv',\n",
     "        sep = '\\t',\n",
@@ -3131,7 +3135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "unauthorized-finger",
+   "id": "pretty-mineral",
    "metadata": {},
    "outputs": [],
    "source": []
